--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>iot-java</name>
-	<comment></comment>
+	<comment></comment>fasd
 	<projects>
 	</projects>
 	<buildSpec>
