--- a/.project
+++ b/.project
@@ -2,7 +2,7 @@
 <projectDescription>
 	<name>iot-java</name>
 	<comment></comment>fasd
-	<projects>
+	<projects>zxc
 	</projects>
 	<buildSpec>
 		<buildCommand>
